adding libs and startign to create apps for the host app to consume

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@taco/elements": ["libs/elements/src/index.ts"],
+      "@taco/regex": ["libs/regex/src/index.ts"],
       "@taco/utils": ["libs/utils/src/index.ts"]
     }
   },
