--- a/angular.json
+++ b/angular.json
@@ -74,6 +74,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
+            "publicHost": "http://localhost:4201/",
             "port": 4201
           }
         },
@@ -201,6 +202,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
+            "publicHost": "http://localhost:4202/",
             "port": 4202
           }
         },
