--- a/apps/builder/project.json
+++ b/apps/builder/project.json
@@ -68,8 +68,8 @@
       },
       "defaultConfiguration": "development",
       "options": {
-        "publicHost": "https://localhost:4201",
-        "port": 4201
+        "port": 4201,
+        "publicHost": "http://localhost:4201"
       }
     },
     "extract-i18n": {
