--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.0",
+    "@angular-devkit/build-angular": "13.1.2",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/language-service": "^13.0.0",
-    "@nrwl/angular": "^13.3.6",
-    "@nrwl/cli": "13.3.6",
-    "@nrwl/cypress": "13.3.6",
-    "@nrwl/eslint-plugin-nx": "13.3.6",
-    "@nrwl/jest": "13.3.6",
-    "@nrwl/linter": "13.3.6",
-    "@nrwl/tao": "13.3.6",
-    "@nrwl/workspace": "13.3.6",
+    "@angular/cli": "13.1.2",
+    "@angular/compiler-cli": "13.1.1",
+    "@angular/language-service": "13.1.1",
+    "@miragejs/graphql": "^0.1.13",
+    "@nrwl/angular": "13.4.2",
+    "@nrwl/cli": "13.4.2",
+    "@nrwl/cypress": "13.4.2",
+    "@nrwl/eslint-plugin-nx": "13.4.2",
+    "@nrwl/jest": "13.4.2",
+    "@nrwl/linter": "13.4.2",
+    "@nrwl/tao": "13.4.2",
+    "@nrwl/workspace": "13.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
@@ -35,24 +36,26 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
+    "miragejs": "^0.1.43",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3",
+    "typescript": "4.5.4",
     "webpack": "^5.65.0",
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "@angular-architects/module-federation": "^13.0.1",
-    "@angular/animations": "^13.0.0",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/router": "^13.0.0",
+    "@angular/animations": "13.1.1",
+    "@angular/common": "13.1.1",
+    "@angular/compiler": "13.1.1",
+    "@angular/core": "13.1.1",
+    "@angular/forms": "13.1.1",
+    "@angular/platform-browser": "13.1.1",
+    "@angular/platform-browser-dynamic": "13.1.1",
+    "@angular/router": "13.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   }
 }
+
